test/quantumControlClassicalAssignment.slq
// TODO: add a note explaining why ps disappears
def foo(const q:ğ”¹)lifted:ğ”¹{
	ps := [false];
	if q { ps[0] = true; }
	return ps; // error
}

def bar(const q:ğ”¹)lifted:ğ”¹{
	p := false;
	if q { p = true; }
	return p; // TODO
}
